Changed yellow background for offer code and fixed alignment issues in my rewards page

--- a/src/scss/pages/_listing.scss
+++ b/src/scss/pages/_listing.scss
@@ -42,11 +42,17 @@
             }
             .offer-code {
                 padding: 3px 5px;
-                background: #f0c04d;
-                color: $custome-black;
+                background: rgba(255, 255, 255, 0.7);
+                color: $custome-secondary;
                 font-size: 12px;
                 strong {
                     font-weight: 700;
+                }
+            }
+            &.my-rewards {
+                h5,
+                span.place {
+                    text-transform: uppercase;
                 }
             }
         }
